Fix heart icon looking off center

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -168,3 +168,7 @@ a[title="Rss"] {
 .like-button.liked:hover {
   opacity: 1;
 }
+
+.like-count:empty {
+  display: none;
+}
